# notedeck

./: .gitignore  .prototools  ARCHITECTURE.md  BRANDING.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  PERFORMANCE.md  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  STRATEGY.md  Taskfile.yml  biome.json  flake.nix  index.html  lefthook.yml  package.json  pnpm-lock.yaml  subset-font.d.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yml  ci.yml  release.yml
.winget/: Hitalin.NoteDeck.locale.ja-JP.yaml
docs/: architecture-adoption-status.md  architecture-and-tauri-advantages.md  notecli-architecture.md  tauri-vs-slint-evaluation.md
packaging/aur/: PKGBUILD  notedeck.desktop
packaging/flatpak/: com.notedeck.desktop.metainfo.xml  com.notedeck.desktop.yml
packaging/homebrew/: notedeck.rb
packaging/winget/: hitalin.NoteDeck.yaml
public/: splash.css
scripts/: gen-misskey-endpoint-permissions.mjs
site/: index.html  main.js  style.css
src/: App.vue  bindings.ts  main.ts  vite-env.d.ts  vue-virtual-scroller.d.ts
src-tauri/: Cargo.toml  build.rs  openapi.json  tauri.conf.json
src-tauri/.cargo/: config.toml.example
src-tauri/android/: AndroidManifest.xml  MainActivity.kt  NotificationWorker.kt  StreamingService.kt  sync.sh
src-tauri/capabilities/: default.json  desktop.json
src-tauri/examples/: gen_bindings.rs
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: ai_chat_service.rs  api.rs  api_tokens.rs  app_dir.rs  commands.rs  db.rs  error.rs  event_bus.rs  http_server.rs  hwheel_hook.rs  image_cache.rs  keychain.rs  lib.rs  main.rs  mfm.rs  migrations.rs  models.rs  ogp.rs  os_notify.rs  perf_config.rs  permissions_gate.rs  query_bridge.rs  query_runtime.rs  rate_limit.rs  settings_store.rs  streaming.rs  win_chrome.rs
src-tauri/src/commands/: admin.rs  ai.rs  ai_chat.rs  api_tokens.rs  auth.rs  charts.rs  clips.rs  content.rs  drafts.rs  enrichment.rs  federation.rs  health.rs  heartbeat.rs  lists.rs  messaging.rs  mod.rs  settings.rs  streaming.rs  timeline.rs  user.rs  utility.rs  vault.rs
src-tauri/src/ogp/: mod.rs  parser.rs  parser_tests.rs
src-tauri/src/ogp/plugins/: amazon.rs  apple_music.rs  bluesky.rs  dlsite.rs  iwara.rs  komiflo.rs  mod.rs  niconico.rs  nijie.rs  pixiv.rs  soundcloud.rs  spotify.rs  tiktok.rs  twitter.rs  xfolio.rs  youtube.rs
src-tauri/src/vault/: connections_store.rs  error.rs  mod.rs  model.rs
src-tauri/tests/: bindings_snapshot.rs  openapi_snapshot.rs
src/adapters/: factory.ts  initAdapter.ts  registry.ts  types.ts
src/aiscript/: api.ts  common.test.ts  common.ts  events.test.ts  events.ts  execute.ts  notedeck-api.test.ts  notedeck-api.ts  plugin-api.test.ts  plugin-api.ts  runtime.ts  sanitize.ts  ui-types.ts  ui.ts
src/assets/: aiscript.tmLanguage.json  shiki-dark-plus.css
src/capabilities/: dispatcher.test.ts  dispatcher.ts  identifier.test.ts  identifier.ts  registry.test.ts  registry.ts  toolSchema.test.ts  toolSchema.ts  types.test.ts  types.ts
src/columns/: registry.ts
src/commands/: cliHandlers.ts  cliIcons.ts  cliParser.ts  definitions.test.ts  definitions.ts  quickPick.ts  quickPickProviders.ts  registry.test.ts  registry.ts  taskCommandPrefix.ts
src/components/: DevWelcome.vue  ThemePreview.vue
src/composables/: heartbeatDaemonKey.ts  postFormConstants.ts  useAccountActions.ts  useAccountMode.ts  useAccountRegistry.ts  useAdaptiveQuality.test.ts  useAdaptiveQuality.ts  useAds.ts  useAiChat.test.ts  useAiChat.ts  useAiConfig.test.ts  useAiConfig.ts  useAiConversation.ts  useAiScriptRunner.ts  useAiSendLoop.test.ts  useAiSendLoop.ts  useAiSystemContext.test.ts  useAiSystemContext.ts  useAutocomplete.ts  useBackButton.ts  useChatThreadPrefetch.ts  useChatVisibility.ts  useClickOutside.ts  useClipboardFeedback.ts  useColumnBadge.ts  useColumnDrag.ts  useColumnHistory.ts  useColumnMount.dom.test.ts  useColumnMount.test.ts  useColumnMount.ts  useColumnPullScroller.ts  useColumnResize.ts  useColumnScroll.ts  useColumnSetup.ts  useColumnTabs.ts  useColumnTheme.ts  useColumnVisibility.ts  useDeckInit.ts  (+102 more)
(+529 files in other folders)
