[package]
name = "notedeck"
version = "0.0.10"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2.0.18"
zeroize = "1"
keyring = { version = "3", optional = true }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-autostart", "dep:tauri-plugin-updater", "dep:tauri-plugin-process", "dep:keyring"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "notedeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]
