[package]
name = "notedeck"
version = "0.0.11"
edition = "2021"

[dependencies]
notecli = { git = "https://github.com/hitalin/notecli.git" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
sha2 = "0.10"

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-autostart", "dep:tauri-plugin-updater", "dep:tauri-plugin-process"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "notedeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]
