[package]
name = "notedeck"
version = "0.0.28"
edition = "2021"

[dependencies]
notecli = { git = "https://github.com/hitalin/notecli.git", rev = "7e4b8cc" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = { version = "2", optional = true }
tauri-plugin-autostart = { version = "2", optional = true }
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
bytes = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
zeroize = "1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
url = "2"
sha2 = "0.10"
scraper = "0.22"
lru = "0.12"
regex = "1"
async-trait = "0.1"

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon", "dep:tauri-plugin-global-shortcut", "dep:tauri-plugin-autostart", "dep:tauri-plugin-updater", "dep:tauri-plugin-process"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[lib]
name = "notedeck_lib"
crate-type = ["lib", "cdylib", "staticlib"]
